--- a/public/css/style.css
+++ b/public/css/style.css
@@ -49,7 +49,7 @@ h3 {
 }
 
 header {
-    background-color: rgb(0, 51, 102);
+    background-color: rgb(255, 255, 255);
     background-repeat: no-repeat;
     background-position: 1em center;
     height: 80px;
@@ -75,7 +75,7 @@ h1 {
     font-size: 20px;
     font-family: serif;
     font-weight: bold;
-    color: #fff;
+    color: #000;
     text-align: center;
     -webkit-box-reflect: below -5px 
         linear-gradient(transparent,
