--- a/public/css/style.css
+++ b/public/css/style.css
@@ -126,6 +126,19 @@ select {
 .buttonBar {
     padding: 10px;
     margin: 5px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 10px;
+}
+
+
+.buttonBar input {
+    width: 100%;
+    height: 20px;
+    margin-top: 1em;
+    margin-bottom: 2em;
+    transition: all 0.5s ease;
+    border-radius: 20px;
 }
 
 .buttonBar button {
