--- a/public/css/style.css
+++ b/public/css/style.css
@@ -48,6 +48,12 @@ h3 {
     padding-top: 5px;
 }
 
+h4 {
+    font-weight: bold;
+    font-size: 11px;
+    text-decoration: underline;
+}
+
 header {
     background-color: rgb(255, 255, 255);
     background-repeat: no-repeat;
@@ -295,10 +301,11 @@ span.hints span:after {
     height: 10em;
 }
 
-#request {
+#requests {
     width: 100%;
     height: 20em;
     font-family: monospace;
+    overflow-x: auto;
 }
 
 #message {
